--- a/src/index.css
+++ b/src/index.css
@@ -5,28 +5,32 @@ body,
 #root,
 .app,
 .content {
-  height: 100%;
-  width: 100%;
-  font-family: "Source Sans Pro", sans-serif;
+	height: 100%;
+	width: 100%;
+	font-family: "Source Sans Pro", sans-serif;
 }
 
 .app {
-  position: relative;
-  display: flex;
+	position: relative;
+	display: flex;
 }
 
 ::-webkit-scrollbar {
-  width: 10px;
+	width: 10px;
 }
 
 ::-webkit-scrollbar-track {
-  background-color: #e0e0e0;
+	background-color: #e0e0e0;
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #888;
+	background-color: #888;
 }
 
 ::-webkit-scrollbar-track:hover {
-  background-color: #555;
+	background-color: #555;
+}
+
+aside > div::-webkit-scrollbar {
+	width: 0px;
 }
